--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout of code
-        uses: checkout@v4
+        uses: actions/checkout@v4
 
       - name: Set up Golang
         uses: actions/setup-go@v5
